--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <div id="winDiv">You lost</div>
 </body>
 
 <script src="sprites.js"></script>
@@ -18,5 +15,6 @@
 <script src="minimapHouse.js"></script>
 <script src="zombiemovement.js"></script>
 <script src="winlose.js"></script>
+<script src="sounds.js"></script>
 
 </html>
