--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 </body>
-
+<script src="sounds.js"></script>
+<script src="startmenu.js"></script>
 <script src="sprites.js"></script>
 <script src="movement.js"></script>
 <script src="randombackground.js"></script>
@@ -15,6 +16,6 @@
 <script src="minimapHouse.js"></script>
 <script src="zombiemovement.js"></script>
 <script src="winlose.js"></script>
-<script src="sounds.js"></script>
+
 
 </html>
